src/components/modal/style.css
:root {
  --modalAnimationTime: 200ms;
}

.Modal {
  width: 100vw;
  height: 100vh;
  background-color: rgba(0, 0, 0, 0.7);
  position: fixed;
  top: 0;
  left: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  transition: opacity var(--modalAnimationTime);
  opacity: 0;
  pointer-events: none;
}

.Modal--opened {
  opacity: 1;
  pointer-events: all;
}

.Modal__inner {
  border-radius: 10px;
  background-color: #fff;
  max-width: 960px;
  width: 90%;
  overflow: hidden;
  transform: scale(0.5);
  transition: transform var(--modalAnimationTime);
}

.Modal__inner--opened {
  transform: scale(1);
}

.Modal__head {
  background: #f5f5f5;
  min-height: 50px;
  padding: 20px 20px 10px;
  display: flex;
  align-items: center;
}

.Modal__title {
  margin: 0 auto 0 0;
  font-size: 32px;
  line-height: 37px;
  font-weight: 700;
}

.Modal__controls {
}

.Modal__content {
}

